--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.0",
         "illuminate/database": "^5.7",
-        "vladk23cm/cart": "*"
+        "slim/twig-view": "^2.4",
+        "vladk23cm/cart": "1.0.5"
     },
     "autoload": {
 	    "psr-4": {
