--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     },
     "autoload": {
 	    "psr-4": {
+          "Admin\\":  "admin/",
 	      "Kappa\\": "src/",
 	      "App\\": "app/"
 	    }
