--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "illuminate/database": "^5.7",
         "slim/twig-view": "^2.4",
         "vladk23cm/cart": "dev-master",
-        "awurth/slim-validation": "^3.1"
+        "awurth/slim-validation": "^3.1",
+        "slim/flash": "^0.4.0"
     },
     "autoload": {
 	    "psr-4": {
